fix spacing on mobile

--- a/packages/augur-simplified/src/modules/market/market-view.styles.less
+++ b/packages/augur-simplified/src/modules/market/market-view.styles.less
@@ -33,12 +33,12 @@
   display: flex;
   flex-flow: row nowrap;
   width: 100%;
-  grid-gap: @size-8;
   align-items: center;
   height: @size-42;
 
   > div:nth-of-type(2) {
     padding: 0 @size-16;
+    margin-left: @size-8;
   }
 }
 
